# package-python-template

./: Dockerfile  pyproject.toml
.github/workflows/: workflow.yaml
github/workflows/: workflow.yaml
